fix: resolve abnormal animation when collapsing panel

--- a/src/components/Collapse/styles.css
+++ b/src/components/Collapse/styles.css
@@ -51,5 +51,5 @@
 }
 
 .slide-enter-active, .slide-leave-active {
-  transition: height 1s ease-in-out;
+  transition: height .3s ease-in-out;
 }
